--- a/src/index.html
+++ b/src/index.html
@@ -1,12 +1,19 @@
 <!doctype html>
 <html>
 <head>
+  <style>
+    body  {
+      background-image: url("https://images.unsplash.com/photo-1491592558635-f4cc68beb2e9?ixlib=rb-0.3.5&ixid=eyJhcHBfaWQiOjEyMDd9&s=ecdf26c134866c289871f5f83477d7e7&auto=format&fit=crop&w=666&q=80");
+      background-color: #cccccc;
+    }
+  </style>
   <meta charset="utf-8">
-  <title>ApplicationPortalUI</title>
+  <title>EcommerceUI</title>
   <base href="/">
-
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+  <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/foundation/6.3.1/css/foundation.min.css">
   <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
 </head>
 <body>
